[kang] 서버 사양 정보 가져오기 수정 작업 (2) - 리눅스 명령어 안 되는 건에 대하여 해결. REST API 생성 이후, 서버 성능 정보 획득 성공. - 서버 주소 정보 관리 기능 구현 준비 (삭제 및 추가 기능은 우선 배제)